<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.br.italogas.taskapp.AdicionarTarefaActivity$PlaceholderFragment" >

		<EditText
	        android:id="@+id/atividade"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/atividade"
	        android:textSize="@dimen/editText_text_size"
	        android:ems="10"
	        android:inputType="textMultiLine" >
	
	        <requestFocus />
	    </EditText>

	    <TextView 
	        android:id="@+id/textView_data"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/data"/>
	    
	    <DatePicker
	        android:id="@+id/data"
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content"/>

	    <TextView 
	        android:id="@+id/textView_horaInicio"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/horaInicio"
	        android:textSize="@dimen/textView_text_size"/>
	    
	    <TimePicker
	        android:id="@+id/horaInicio"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	    <TextView 
	        android:id="@+id/textView_horaFim"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/horaFim"
	        android:textSize="@dimen/textView_text_size"/>
	    
	    <TimePicker
	        android:id="@+id/horaFim"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    
	    <EditText 
	        android:id="@+id/campo_local"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/local"
	        android:textSize="@dimen/editText_text_size"
	        android:inputType="textMultiLine" />
    
	    <EditText 
	        android:id="@+id/campo_obs"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/obs"
	        android:textSize="@dimen/editText_text_size"
	        android:inputType="textMultiLine" />
	    
	    <Button 
	        android:id="@+id/botao_adicionarTarefa"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/botao_adicionarTarefa"
	        android:onClick="adicionarTarefa"/>
  
</LinearLayout>